--- a/Dotfiles/tmux.conf
+++ b/Dotfiles/tmux.conf
@@ -1,5 +1,10 @@
+# OPTIONS
 set -g default-terminal "screen-256color"
 set -g mode-mouse on
 set -g mouse-select-pane on
+set -g set-titles on
+set -g set-titles-string "#T"
+
+# LAYOUT
 new
 splitw -h -p 50
